# VegaVoice

./: .gitignore  CMakeLists.txt  DelivererUdp.h  LICENSE  Login.cpp  Login.h  README.md  ReceiverUdp.h  SenderUdp.h  Serialization.h  StringList.h  UdpCall.h  add_contact.cpp  add_contact.h  button.cpp  database_handler.h  main.cpp  mainwindow.cpp  mainwindow.h
headers/: Audio.h  CallHistoryWidget.h  ContactDialog.h  DelivererUdp.h  Login.h  ReceiverUdp.h  SenderUdp.h  Serialization.h  StringList.h  UdpCall.h  add_contact.h  button.h  database_handler.h  mainwindow.h
resources/: README.md  user_db.sqlite3
sources/: CallHistoryWidget.cpp  ContactDialog.cpp  Login.cpp  add_contact.cpp  button.cpp  main.cpp  mainwindow.cpp
